--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Run golangci-lint
-        run: golangci/golangci-lint-action@v2.5.2
+        uses: golangci/golangci-lint-action@v2.5.2
 
   generate-lint:
     needs: setup
