--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,42 +1,48 @@
 name: Perform CI
 
 on:
-  - push
-  - pull_request
-  - workflow_dispatch
+  pull_request:
+    branches: [ main ]
+  workflow_dispatch:
 
 jobs:
-  setup:
+  golangci-lint:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-
-      - name: Set up Go
-        uses: actions/setup-go@v2
+      - uses: actions/setup-go@v2
         with:
           go-version: 1.17
-
-  golangci-lint:
-    needs: setup
-    runs-on: ubuntu-latest
-    steps:
       - name: Run golangci-lint
         uses: golangci/golangci-lint-action@v2.5.2
+        with:
+          version: v1.31.0
+          args: --timeout=5m
 
   generate-lint:
-    needs: setup
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-go@v2
+        with:
+          go-version: 1.17
+      # NOTE(irvinlim): Need to operate in GOPATH in order for generate-groups.sh to succeed (see Makefile).
+      # Move directory GOPATH instead of using symlinks: https://github.com/golang/go/issues/45609
+      - name: Move to GOPATH
+        run: |
+          export PKG_PATH="$GOPATH/src/github.com/${{ github.repository }}"
+          mkdir -p $(dirname $PKG_PATH)
+          mv `pwd` $PKG_PATH
+          cd $PKG_PATH
       - name: Generate code
         run: make generate
-
       - name: Check for differences
         run: git add . && git diff --exit-code --staged
 
   license-header-lint:
-    needs: setup
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
       - run: make lint-license
 
   go-test:
@@ -46,17 +52,15 @@ jobs:
     strategy:
       matrix:
         go-version: [ 1.17 ]
-        platform: [ ubuntu-latest, macos-latest ]
+        platform: [ ubuntu-latest ]
     runs-on: ${{ matrix.platform }}
     steps:
-      - name: Install Go
-        uses: actions/setup-go@v2
+      - uses: actions/checkout@v2
+      - uses: actions/setup-go@v2
         with:
           go-version: ${{ matrix.go-version }}
-
       - name: Run tests
         run: make test
-
       - name: Push code coverage to Codecov
         uses: codecov/codecov-action@v2
         with:
