chore: Fix CI (#2)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,47 +1,48 @@
 name: Perform CI
 
 on:
-  - push
-  - pull_request
-  - workflow_dispatch
+  pull_request:
+    branches: [ main ]
+  workflow_dispatch:
 
 jobs:
-  setup:
+  golangci-lint:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-
-      - name: Set up Go
-        uses: actions/setup-go@v2
+      - uses: actions/setup-go@v2
         with:
           go-version: 1.17
-
-  golangci-lint:
-    needs: setup
-    runs-on: ubuntu-latest
-    steps:
       - name: Run golangci-lint
-        run: golangci/golangci-lint-action@v2.5.2
+        uses: golangci/golangci-lint-action@v2.5.2
+        with:
+          version: v1.31.0
+          args: --timeout=5m
 
   generate-lint:
-    needs: setup
     runs-on: ubuntu-latest
+    # NOTE(irvinlim): Need to operate in GOPATH in order for generate-groups.sh to succeed (see Makefile).
     steps:
+      - uses: actions/setup-go@v2
+        with:
+          go-version: 1.17
+      - uses: actions/checkout@v2
+        with:
+          path: "go/src/github.com/${{ github.repository }}"
       - name: Generate code
         run: make generate
-
+        env:
+          GOPATH: /home/runner/work/furiko/go
+        working-directory: "go/src/github.com/${{ github.repository }}"
       - name: Check for differences
         run: git add . && git diff --exit-code --staged
+        working-directory: "go/src/github.com/${{ github.repository }}"
 
   license-header-lint:
-    needs: setup
     runs-on: ubuntu-latest
     steps:
-      - name: Install license-header-checker
-        run: go install github.com/lsm-dev/license-header-checker/cmd/license-header-checker@v1.3.0
-
-      - name: Check license headers in all Go files
-        run: license-header-checker hack/boilerplate.go.txt . go
+      - uses: actions/checkout@v2
+      - run: make lint-license
 
   go-test:
     needs:
@@ -50,17 +51,15 @@ jobs:
     strategy:
       matrix:
         go-version: [ 1.17 ]
-        platform: [ ubuntu-latest, macos-latest ]
+        platform: [ ubuntu-latest ]
     runs-on: ${{ matrix.platform }}
     steps:
-      - name: Install Go
-        uses: actions/setup-go@v2
+      - uses: actions/checkout@v2
+      - uses: actions/setup-go@v2
         with:
           go-version: ${{ matrix.go-version }}
-
       - name: Run tests
-        run: ./hack/run-tests.sh
-
+        run: make test
       - name: Push code coverage to Codecov
         uses: codecov/codecov-action@v2
         with:
