chore: Use kustomize edit to set image names

--- a/config/execution/controller/deployment.yaml
+++ b/config/execution/controller/deployment.yaml
@@ -28,7 +28,7 @@ spec:
           args:
             - "--config=/etc/controller/config.yaml"
             - "-v=2"
-          image: controller:latest
+          image: execution-controller:latest
           securityContext:
             allowPrivilegeEscalation: false
           livenessProbe:
