--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,12 +5,6 @@ on:
     tags:
       - '*'
   workflow_dispatch:
-    inputs:
-      snapshot:
-        required: false
-        type: boolean
-        default: false
-        description: Whether this is a snapshot release
 
 jobs:
   release:
@@ -39,6 +33,6 @@ jobs:
         with:
           distribution: goreleaser
           version: latest
-          args: release --rm-dist ${{ fromJSON('["", "--snapshot"]')[github.event.inputs.snapshot == 'true'] }}
+          args: release --rm-dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
