fix: Use correct entrypoint for Deployment

--- a/config/execution/controller/deployment.yaml
+++ b/config/execution/controller/deployment.yaml
@@ -24,7 +24,7 @@ spec:
       containers:
         - name: controller
           command:
-            - /controller
+            - /execution-controller
           args:
             - "--config=/etc/controller/config.yaml"
             - "-v=2"
