chore: Update to golangci-lint v1.45.2

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -24,22 +24,19 @@ linters:
     - gofmt
     - goheader
     - goimports
-    - golint
     - gomodguard
     - goprintffuncname
     - gosec
     - gosimple
     - govet
     - ineffassign
-    - interfacer
     - lll
-    - maligned
     - misspell
     - nakedret
     - noctx
     - prealloc
+    - revive
     - rowserrcheck
-    - scopelint
     - sqlclosecheck
     - staticcheck
     - structcheck
