--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -51,8 +51,8 @@ dockers:
     ids:
       - execution-controller
     image_templates:
+      - "furikoio/execution-controller:{{ if .IsSnapshot }}v{{ .Version }}{{ else }}{{ .Tag }}{{ end }}"
       - "furikoio/execution-controller:latest"
-      - "furikoio/execution-controller:{{ .Tag }}"
     build_flag_templates:
       - "--platform=linux/amd64"
       - "--target=execution-controller"
@@ -61,8 +61,8 @@ dockers:
     ids:
       - execution-webhook
     image_templates:
+      - "furikoio/execution-webhook:{{ if .IsSnapshot }}v{{ .Version }}{{ else }}{{ .Tag }}{{ end }}"
       - "furikoio/execution-webhook:latest"
-      - "furikoio/execution-webhook:{{ .Tag }}"
     build_flag_templates:
       - "--platform=linux/amd64"
       - "--target=execution-webhook"
