feat: Add JobConfigController tests, update JobReference fields

--- a/config/crd/bases/execution.furiko.io_jobconfigs.yaml
+++ b/config/crd/bases/execution.furiko.io_jobconfigs.yaml
@@ -4301,15 +4301,24 @@ spec:
                   description: A list of pointers to active Job objects for the JobConfig.
                   items:
                     properties:
+                      creationTimestamp:
+                        description: Timestamp that the Job was created.
+                        format: date-time
+                        type: string
                       name:
                         description: Name of the Job.
                         type: string
-                      namespace:
-                        description: Namespace of the Job.
+                      startTime:
+                        description: Timestamp that the Job was started.
+                        format: date-time
+                        type: string
+                      uid:
+                        description: UID of the Job.
                         type: string
                     required:
+                      - creationTimestamp
                       - name
-                      - namespace
+                      - uid
                     type: object
                   type: array
                 lastScheduled:
@@ -4324,15 +4333,24 @@ spec:
                   description: A list of pointers to Job objects queued for the JobConfig.
                   items:
                     properties:
+                      creationTimestamp:
+                        description: Timestamp that the Job was created.
+                        format: date-time
+                        type: string
                       name:
                         description: Name of the Job.
                         type: string
-                      namespace:
-                        description: Namespace of the Job.
+                      startTime:
+                        description: Timestamp that the Job was started.
+                        format: date-time
+                        type: string
+                      uid:
+                        description: UID of the Job.
                         type: string
                     required:
+                      - creationTimestamp
                       - name
-                      - namespace
+                      - uid
                     type: object
                   type: array
                 state:
