--- a/config/crd/bases/execution.furiko.io_jobconfigs.yaml
+++ b/config/crd/bases/execution.furiko.io_jobconfigs.yaml
@@ -4308,6 +4308,9 @@ spec:
                       name:
                         description: Name of the Job.
                         type: string
+                      phase:
+                        description: Phase of the Job.
+                        type: string
                       startTime:
                         description: Timestamp that the Job was started.
                         format: date-time
@@ -4318,6 +4321,7 @@ spec:
                     required:
                       - creationTimestamp
                       - name
+                      - phase
                       - uid
                     type: object
                   type: array
@@ -4340,6 +4344,9 @@ spec:
                       name:
                         description: Name of the Job.
                         type: string
+                      phase:
+                        description: Phase of the Job.
+                        type: string
                       startTime:
                         description: Timestamp that the Job was started.
                         format: date-time
@@ -4350,6 +4357,7 @@ spec:
                     required:
                       - creationTimestamp
                       - name
+                      - phase
                       - uid
                     type: object
                   type: array
