chore: Add goreleaser for CLI

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -23,6 +23,16 @@ builds:
       - linux
     goarch:
       - amd64
+  - id: furiko-cli
+    main: ./cmd/furiko-cli
+    binary: furiko
+    goos:
+      - linux
+      - darwin
+      - windows
+    goarch:
+      - amd64
+      - arm64
 
 # Create archive for each entrypoint.
 archives:
