--- a/config/samples/execution_v1alpha1_job.yaml
+++ b/config/samples/execution_v1alpha1_job.yaml
@@ -13,35 +13,37 @@ spec:
 
   # Defines how to create the job.
   template:
-    # Defines how to create the task.
-    task:
-      # PodTemplate for creating the task.
-      template:
-        spec:
-          restartPolicy: Never
-          containers:
-            - name: job-container
-              args:
-                - echo
-                - "Hello world, ${option.user-name}!"
-              env:
-                - name: JOB_NAME
-                  value: "${job.name}"
-                - name: TASK_NAME
-                  value: "${task.name}"
-                - name: TASK_RETRY_INDEX
-                  value: "${task.retry_index}"
-              image: "alpine:${option.image-tag}"
-              resources:
-                limits:
-                  cpu: 100m
-                  memory: 64Mi
-
-      # Maximum duration that a task can be Pending for.
-      pendingTimeoutSeconds: 1800
 
     # Defines how many tasks can be created in case of failure.
     maxAttempts: 3
 
     # Defines how long to wait between retries.
     retryDelaySeconds: 15
+
+    task:
+      # Maximum duration that a task can be Pending for.
+      pendingTimeoutSeconds: 1800
+
+      # Template for creating the task as a Pod.
+      template:
+        # Defines how to create the task as a Pod.
+        pod:
+          spec:
+            restartPolicy: Never
+            containers:
+              - name: job-container
+                args:
+                  - echo
+                  - "Hello world, ${option.user-name}!"
+                env:
+                  - name: JOB_NAME
+                    value: "${job.name}"
+                  - name: TASK_NAME
+                    value: "${task.name}"
+                  - name: TASK_RETRY_INDEX
+                    value: "${task.retry_index}"
+                image: "alpine:${option.image-tag}"
+                resources:
+                  limits:
+                    cpu: 100m
+                    memory: 64Mi
