--- a/config/crd/bases/execution.furiko.io_jobs.yaml
+++ b/config/crd/bases/execution.furiko.io_jobs.yaml
@@ -156,14 +156,18 @@ spec:
                   description: Condition stores details about the Job's current condition.
                   properties:
                     finished:
-                      description: Stores the status of the Job's finished state. If specified, it also means that the Job is terminal.
+                      description: Stores the status of the Job's finished state. If specified, it means that all tasks in the Job have terminated.
                       properties:
-                        createTime:
+                        finishTime:
+                          description: The time at which the Job was first marked as finished by the controller.
+                          format: date-time
+                          type: string
+                        latestCreationTimestamp:
                           description: The time at which the latest task was created by the controller. May be nil if no tasks were ever created.
                           format: date-time
                           type: string
-                        finishTime:
-                          description: The time at which the Job was first marked as finished by the controller.
+                        latestRunningTimestamp:
+                          description: The time at which the latest task had started running. May be nil if no tasks had started running.
                           format: date-time
                           type: string
                         message:
@@ -174,10 +178,6 @@ spec:
                           type: string
                         result:
                           description: The result of it being finished.
-                          type: string
-                        startTime:
-                          description: The time at which the latest task had started running. May be nil if the task never started running.
-                          format: date-time
                           type: string
                       required:
                         - finishTime
@@ -194,27 +194,27 @@ spec:
                           type: string
                       type: object
                     running:
-                      description: Stores the status of the Job's running state. If specified, it means that the Job currently has a running task.
+                      description: Stores the status of the Job's running state. If specified, it means that all tasks in the Job have started running. If the Job is already complete, this status may be set of not all tasks are terminated.
                       properties:
-                        createTime:
-                          description: The time at which the running task was created by the controller.
+                        latestRunningTimestamp:
+                          description: The time at which the latest task had started running.
                           format: date-time
                           type: string
-                        startTime:
-                          description: The time at which the running task had started running.
+                        latestTaskCreationTimestamp:
+                          description: The timestamp for the latest task that was created by the controller.
                           format: date-time
                           type: string
+                        terminatingTasks:
+                          description: Number of tasks waiting to be terminated.
+                          format: int64
+                          type: integer
                       required:
-                        - createTime
-                        - startTime
+                        - latestRunningTimestamp
+                        - latestTaskCreationTimestamp
                       type: object
                     waiting:
-                      description: Stores the status of the Job's waiting condition. If specified, it means that the Job currently is waiting for a task.
+                      description: Stores the status of the Job's waiting condition. If specified, it means that the Job currently is waiting for at least one task to be created and start running.
                       properties:
-                        createTime:
-                          description: The time at which the latest task was created by the controller, if any.
-                          format: date-time
-                          type: string
                         message:
                           description: Optional descriptive message explaining the condition's last transition.
                           type: string
@@ -227,6 +227,53 @@ spec:
                   description: CreatedTasks describes how many tasks were created in total for this Job.
                   format: int64
                   type: integer
+                parallelStatus:
+                  description: The current status for parallel execution of the job. May not be set if the job is not a parallel job.
+                  properties:
+                    complete:
+                      description: If true, the job is complete and currently in the process of waiting for all remaining tasks to be terminated.
+                      type: boolean
+                    created:
+                      description: Total number of task parallel indexes that have created tasks.
+                      format: int64
+                      type: integer
+                    failed:
+                      description: Total number of task parallel indexes that failed (including all retries).
+                      format: int64
+                      type: integer
+                    retryBackoff:
+                      description: Total number of task parallel indexes that are currently in retry backoff.
+                      format: int64
+                      type: integer
+                    running:
+                      description: Total number of task parallel indexes that are currently running.
+                      format: int64
+                      type: integer
+                    starting:
+                      description: Total number of task parallel indexes that are currently starting.
+                      format: int64
+                      type: integer
+                    succeeded:
+                      description: Total number of task parallel indexes that are successful.
+                      format: int64
+                      type: integer
+                    successful:
+                      description: If complete, contains whether the job is successful according to the ParallelCompletionStrategy.
+                      type: boolean
+                    terminated:
+                      description: Total number of task parallel indexes where all tasks are completely terminated, including when no tasks are created.
+                      format: int64
+                      type: integer
+                  required:
+                    - complete
+                    - created
+                    - failed
+                    - retryBackoff
+                    - running
+                    - starting
+                    - succeeded
+                    - terminated
+                  type: object
                 phase:
                   description: Phase stores the high-level description of a Job's state.
                   type: string
@@ -278,7 +325,7 @@ spec:
                             description: Unique, one-word, CamelCase reason for the task's status.
                             type: string
                           result:
-                            description: The execution result derived from this task if it was finished. For simplicity, the values of this field also matches that of the Job's result field.
+                            description: If the state is Terminated, the result of the task.
                             type: string
                           state:
                             description: State of the task.
@@ -331,7 +378,7 @@ spec:
                             description: Unique, one-word, CamelCase reason for the task's status.
                             type: string
                           result:
-                            description: The execution result derived from this task if it was finished. For simplicity, the values of this field also matches that of the Job's result field.
+                            description: If the state is Terminated, the result of the task.
                             type: string
                           state:
                             description: State of the task.
@@ -350,6 +397,7 @@ spec:
                   x-kubernetes-list-type: atomic
               required:
                 - condition
+                - createdTasks
                 - phase
               type: object
           type: object
